<resources>
    <string name="app_name">Armut Hizmet Veren</string>
    <string name="action_settings">Settings</string>
    <string name="tab1">Fırsat</string>
    <string name="tab2">Teklif</string>
    <string name="tab3">Randevu</string>
    <string name="continueText">Devam</string>
    <string name="login">Giriş Yap</string>
    <string name="show_pass">Şifremi göster</string>
    <string name="logout">Çıkış Yap</string>
    <string name="tab1_projects">İşlerim</string>
    <string name="tab2_calendar">Takvim</string>
    <string name="tab3_profile">Profilim</string>
    <string name="job_details">İş Detayları</string>
    <string name="com_info_title">İletişim Bilgilerin</string>
    <string name="name">Ad</string>
    <string name="surname">Soyad</string>
    <string name="email">E-mail</string>
    <string name="gsm">Cep Telefonu (5xx)xxx-xxxx</string>
    <string name="profile_photo_upload_title">Profil fotoğrafı yükle</string>
    <string name="profile_photo_upload_subtitle">Profil fotoğrafı yüklemek / güncellemek için aşağıdaki yöntemlerden birini seç.</string>
    <string name="profile_photo_upload_problem">Profil Fotosu yüklenirken bir sorun oluştu, lütfen daha sonra tekrar deneyin.</string>
    <string name="from_gallery">Galeriden Seç</string>
    <string name="select_photo_from_gallery">Galeriden Fotoğraf Ekle</string>
    <string name="send_my_current_location">Mevcut Lokasyonumu Ekle</string>
    <string name="shoot_photo_for_attachment">Fotoğraf Çek</string>
    <string name="shoot_photo">Fotoğraf Çek</string>
    <string name="add_new_card_button">Yeni Kart Ekle</string>
    <string name="update_address">Adres Bilgileri</string>
    <string name="update_userinfo">Kullanıcı Bilgileri</string>
    <string name="save">Kaydet</string>
    <string name="edit_password">Şifreni değiştirmek için \n hatırlayabileceğin yeni bir şifre gir.</string>
    <string name="warning_photo_upload_while_messaging">Mesaj\'a fotoğraf ekleyebilmek için çekilen fotoğrafı SD kartınıza yüklememize izin verin.</string>
    <string name="warning_photo_upload_profile">Profil fotoğrafı ekleyebilmek ya da güncelleyebilmek için çekilen fotoğrafı SD kartınıza yüklememize izin verin.</string>
    <string name="review_title">Yorumlar</string>
    <string name="exit">Çıkış Yap</string>
    <string name="logout_question">Hesabınızdan çıkmak istediğine emin misin?</string>
    <string name="password_create_text">Talebini takip etmek için \nhatırlayabileceğin bir şifre \noluştur. </string>
    <string name="password_short">Şifren 6 karakterden kısa.</string>
    <string name="password_not_equal">Şifreni yanlış girdin.</string>
    <string name="problem_on_updating_address">Adresin güncellenirken bir problem oluştu, lütfen tekrar dene.</string>
    <string name="location_info_not_present">Lokasyon bilgisine ulaşılamıyor. Lütfen telefon ayarlarından ya da Tamam tuşuna basarak lokasyon servisini aç.\n\nNot: Lokasyon servisi açıldıktan sonra lokasyon bilgisinin gelmesi 4–5 saniye sürebilir.</string>
    <string name="no_connection_title">Bağlantı Hatası!</string>
    <string name="no_connection_with_button">Lütfen internetinizi kontrol edin ve açık olduğuna emin olduğunuzda Tamam tuşuna basın.</string>
    <string name="select_state">İl Seç</string>
    <string name="select_city">İlçe Seç</string>
    <string name="select_district">Semt Seç</string>
    <string name="select_reason">Neden Seç</string>
    <string name="use_location">Lokasyonumu Kullan</string>
    <string name="address_detail">Adres detayı gir</string>
    <string name="ok">Tamam</string>
    <string name="cancel">İptal</string>
    <string name="close">Kapat</string>
    <string name="yes">Evet</string>
    <string name="no">Hayır</string>
    <string name="day_today"> Bugün </string>
    <string name="tab_all_comments">En Son</string>
    <string name="tab_best_comments">En İyi</string>
    <string name="tab_worst_comments">En Kötü</string>
    <string name="tab_details">Detay</string>
    <string name="tab_messages">Mesajlar</string>
    <string name="give_quote">TEKLİF VER</string>
    <string name="give_quote_lowercase">Teklif Ver</string>
    <string name="no_opportunities">Gelen iş fırsatlarını bu ekrandan görüp, inceleyebilir istediklerine teklif verebilirsin.</string>
    <string name="no_quotes">Teklif verdiğin işlerin durumunu buradan kontrol edebilir, iş detaylarına bakabilir, hizmet alan ile iletişim kurabilirsin.</string>
    <string name="no_deals">Randevu detaylarını bu ekrandan kontrol edebilir, iş detaylarına bakabilir, hizmet alan ile iletişim kurabilirsin.</string>
    <string name="no_calendar_data">Müsait olduğun gün ve saatleri bu ekrandan ayarlayabilirsin. Böylece sana daha uygun iş fırsatları sunabiliriz.</string>
    <string name="no_opportunities_logged_in">Gelen iş fırsatlarını bu ekrandan görüp, inceleyebilir istediklerine teklif verebilirsin. Şimdilik yeni bir iş fırsatın yok. </string>
    <string name="no_quotes_logged_in">Teklif verdiğin işlerin durumunu buradan kontrol edebilir, iş detaylarına bakabilir, hizmet alan ile iletişim kurabilirsin. Şimdilik teklif verdiğin bir iş yok. </string>
    <string name="no_deals_logged_in">Randevu detaylarını bu ekrandan kontrol edebilir, iş detaylarına bakabilir, hizmet alan ile iletişim kurabilirsin. Şimdilik herhangi bir randevun yok. </string>
    <string name="prompt_email">E-mail</string>
    <string name="forget_password">&lt;u>Şifremi Unuttum&lt;/u></string>
    <string name="sign_up_link">&lt;u>Üye olmak için tıkla&lt;/u></string>
    <string name="new_password">Yeni Şifre</string>
    <string name="prompt_password">Şifre</string>
    <string name="old_password">Eski Şifre</string>
    <string name="new_password_repeat">Yeni Şifre Tekrar</string>
    <string name="action_sign_in_short">Giriş Yap</string>
    <string name="error_invalid_email">E-mail Adresi Geçersiz</string>
    <string name="error_invalid_name">Geçerli bir ad giriniz</string>
    <string name="error_invalid_surname">Geçerli bir soyad giriniz</string>
    <string name="error_invalid_phone">Geçerli bir telefon numarası giriniz</string>
    <string name="error_invalid_password">Şifre Geçersiz</string>
    <string name="error_field_required">Alan gerekli</string>
    <string name="show_password">Göster</string>
    <string name="hide_password">Gizle</string>
    <string name="profile_personal_info_title">Kişisel Bilgiler</string>
    <string name="profile_change_password">Şifre Değiştir</string>
    <string name="profile_address_title">Adreslerim</string>
    <string name="profile_add_address">Yeni Adres Ekle</string>
    <string name="profile_creditcard_title">Kredi Kartı Bilgileri</string>
    <string name="profile_screen">Profilim</string>
    <string name="profile_login_advice">Giriş yaptıktan sonra profil bilgilerine bu sayfadan ulaşabilirsin.</string>
    <string name="profile_invite_friends_title">Arkadaşlarını Davet Et</string>
    <string name="profile_account_balance_title">Hesap Bakiyesi</string>
    <string name="profile_invite_friends_subtitle">Armut\'u arkadaşlarına tavsiye et, onlar da\nbu hizmetten yararlansın.</string>
    <string name="profile_communication_title">Armut\'a Ulaş</string>
    <string name="profile_communication_subtitle">Sorun mu var? Hemen bize ulaş.</string>
    <string name="profile_see_all_reviews">Tümünü Gör (*)</string>
    <string name="ratings_title">Yorumlar</string>
    <string name="ratings_subtitle">Müşteri değerlendirmeleri burada gözükecektir. Şimdilik bir değerlendirmen yok.</string>
    <string name="share">Arkadaşına tavsiye et</string>
    <string name="share_text">Armut.com üzerinden hizmet veriyorum. Benim gibi kaliteli profesyonellere ulaşmak için Armut\'u ziyaret edebilirsiniz. Hizmet Piş Ağzıma Düş! http://bit.ly/2jm92oA </string>
    <string name="share_text_short">Armut.com\'u kullandım, memnun kaldım. Tavsiye ederim.</string>
    <string name="share_text_twitter">\@armutcom üzerinden hizmet veriyorum. Benim gibi kaliteli profesyonellere ulaşmak için Armut\'u ziyaret edebilirsiniz. Hizmet Piş Ağzıma Düş!</string>
    <string name="rate_our_app">Armut\'u değerlendir</string>
    <string name="rate_armut_title">Mobil uygulamamızı sevdin mi?</string>
    <string name="rate_armut_second_title">Uygulamamızı puanlayıp daha çok kişiye ulaşmamıza yardım eder misin? %1$s</string>
    <string name="rate_armut_second_yes">Tabii ki!</string>
    <string name="rate_armut_second_later">Daha sonra</string>
    <string name="rate_armut_second_no">Hayır</string>
    <string name="rate_armut_second_never_ask_again">Hayır, bir daha sorma</string>
    <string name="rate_armut_three">Fikirlerin bizim için çok değerli, neleri geliştirebiliriz? %1$s</string>
    <string name="send">Gönder</string>
    <string name="call">Ara</string>
    <string name="call_caps">ARA</string>
    <string name="message">E-mail Yolla</string>
    <string name="send_mail">E-mail Yolla …</string>
    <string name="no_mail_app">E-mail uygulaması mevcut değil.</string>
    <string name="no_call_app">Arama uygulaması mevcut değil.</string>
    <string name="email_send_communication_subject">Armut - İletişim</string>
    <string name="reject_job">İlgilenmiyorum</string>
    <string name="reject_job_reason">Sana en uygun iş fırsatlarını sunmaya çalşıyoruz, iş fırsatıyla neden ilgilenmediğini bilmek isteriz. </string>
    <string name="call_preference_no_call">Telefon gizli, mesaj atabilirsin.</string>
    <string name="call_preference_secret_number">Arayabilir ama numaram gizli kalsın.</string>
    <string name="call_preference_can_call">Teklif veren arayabilir.</string>
    <string name="cancel_job_select_reason">Lütfen bir iş iptal nedeni seçin.</string>
    <string name="not_cancellable">İş şimdilik iptal edilemiyor, lütfen daha sonra tekrar deneyin.</string>
    <string name="please_select_date">Lütfen tarih seçin!</string>
    <string name="work_start_date_title">Tahmini Zaman </string>
    <string name="work_start_day_time">Gün ve Saat  </string>
    <string name="work_start_specific_date">Belli bir zaman (üç hafta içinde)</string>
    <string name="work_start_in_two_months">İki ay içinde</string>
    <string name="work_start_not_specified">Sadece fiyat bakıyorum</string>
    <string name="work_start_in_six_months">Altı ay içinde</string>
    <string name="quote_price_title">Fiyat (KDV dahil)</string>
    <string name="get_direction">Yol Tarifi Al</string>
    <string name="with_car">Araba ile</string>
    <string name="with_bus">Toplu taşıma ile</string>
    <string name="empty_message_to_provider">Müşterin başka profesyonellerden de teklif alabilir, şimdi kendini tanıtmanın ve işinde iyi olduğunu göstermenin zamanı.</string>
    <string name="empyt_message_to_provider_bm2">İş senin! Şimdi yapman gereken zamanında başlamak ve hizmet kalitenle ev sahibini memnun etmek. Kolay gelsin!</string>
    <string name="location_tracking_warning_message">Konum hizmetlerinin açık olması ve uygulamaya konum kullanma izninin verilmesi gerekmektedir. \n\nBöylece size daha çok ve daha uygun iş fırsatları getirebileceğiz.</string>
    <string name="calendar_subtitle">Takviminiz güncellendi.</string>
    <string name="working">Çalışıyorum</string>
    <string name="not_working">Çalışmıyorum</string>
    <string name="emergency">ACİL</string>
    <string name="special">ÖZEL</string>
    <string name="fbId">1802042863341636</string>
    <string name="mpId">d16fb5272eadd35d6ef2d20381046031</string>
    <string name="adjustToken">9vu901dkgni8</string>
    <string name="nrToken">AA9dc039c2172075e795f9923b9a90e8dae0374717</string>
    <string name="bottom_arrow">&#9660;</string>
</resources>