<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="@android:color/transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@drawable/big_text_area_selected_shape"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/dialogTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/password_create_text"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/oldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/old_password"
                android:inputType="textPassword"
                android:background="@drawable/selector_edit_text"
                android:drawablePadding="12dp"
                android:drawableEnd="@drawable/icn_lock"
                android:drawableRight="@drawable/icn_lock"
                android:maxLines="1" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:background="@drawable/selector_edit_text"
                android:drawablePadding="12dp"
                android:drawableEnd="@drawable/icn_lock"
                android:drawableRight="@drawable/icn_lock"
                android:maxLines="1" />

            <EditText
                android:id="@+id/newPasswordRepeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:hint="@string/new_password_repeat"
                android:inputType="textPassword"
                android:background="@drawable/selector_edit_text"
                android:drawablePadding="12dp"
                android:drawableEnd="@drawable/icn_lock"
                android:drawableRight="@drawable/icn_lock"
                android:maxLines="1" />

            <!--            android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"-->

            <LinearLayout
                android:id="@+id/showPasswordToggleLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:descendantFocusability="afterDescendants"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/showPasswordToggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="8dp"
                    android:layout_gravity="center_vertical"
                    android:focusable="false"
                    android:clickable="true"
                    android:checked="false"
                    android:textOff=""
                    android:textOn=""
                    android:button="@drawable/toggle_switch_orange"
                    android:background="@android:color/transparent"/>
                <TextView
                    android:id="@+id/showPasswordToggleTitle"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:maxLines="1"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/font_size_checkbox"
                    android:textColor="@color/silver"
                    android:text="@string/show_pass"/>
            </LinearLayout>


            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/green_bottom_round_cornered_shape"
                android:padding="10dp"
                android:text="@string/save"
                android:textColor="@color/white" />

        </LinearLayout>


    </RelativeLayout>
    <LinearLayout
        android:id="@+id/progressBarLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:visibility="gone"
>
        <!--android:background="#4DFFFFFF"-->
        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />
    </LinearLayout>
</RelativeLayout>
