<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:layout_marginTop="10dp"
    android:paddingTop="30dp"
    android:background="@android:color/transparent">
    <View
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:background="@drawable/contact_shape" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profileThumbnail"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@drawable/big_text_area_selected_shape"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_horizontal_margin">
        <!--android:layout_marginTop="-40dp"-->

        <TextView
            android:id="@+id/dialogTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:layout_marginTop="28dp"
            android:gravity="center_horizontal"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/profile_communication_title"
            android:textColor="@color/black"
            android:textSize="17dp" />

        <TextView
            android:id="@+id/dialogSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_horizontal"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/profile_communication_subtitle"
            android:textSize="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:weightSum="2">

            <Button
                android:id="@+id/sendMessageButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:background="@drawable/gray_left_round_cornered_shape"
                android:padding="10dp"
                android:text="@string/message"
                android:textAllCaps="false"
                style="@style/RalewayBold"
                android:textColor="@color/kermit_green" />

            <Button
                android:id="@+id/callButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:background="@drawable/green_right_round_cornered_shape"
                android:padding="10dp"
                android:textAllCaps="false"
                android:text="@string/call"
                style="@style/RalewayBold"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>



    <!--<de.hdodenhof.circleimageview.CircleImageView-->
        <!--android:id="@+id/profileThumbnail"-->
        <!--android:layout_width="@dimen/big_thumbnail_width"-->
        <!--android:layout_height="@dimen/big_thumbnail_width"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:layout_marginBottom="20dp"-->
        <!--app:civ_border_width="2dp"-->
        <!--app:civ_border_color="@color/white"-->
        <!--app:civ_border_overlay="true"-->
        <!--android:background="@drawable/contact_shape"-->
        <!--android:src="@drawable/icn_callcenter"-->
        <!--android:layout_marginTop="10dp" />-->
</RelativeLayout>