<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/calendarRowBackground">

    <View
        android:id="@+id/dayIndicator"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentLeft="true"
        android:background="@color/calendar_weekday">

    </View>

    <RelativeLayout
        android:id="@+id/rowLayout"
        android:layout_width="match_parent"
        android:layout_marginTop="12dp"
        android:layout_toRightOf="@+id/dayIndicator"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center_horizontal"
            android:padding="12dp"
            android:text=""
            android:textColor="@color/white"
            android:textSize="16dp"
            style="@style/RalewayBold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center_horizontal"
            android:padding="13dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/timeSelector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="09:00 - 18:00 "
                android:textColor="@color/white"
                android:textSize="15dp"
                style="@style/RalewayBold" />

            <TextView
                android:id="@+id/arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:text="@string/bottom_arrow"
                android:textColor="@color/white"
                android:textSize="9dp"
                android:gravity="top"
                android:layout_gravity="top" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/workingToggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="@string/working"
                android:textOff="@string/not_working"
                android:textSize="7dp"
                android:textColor="@color/white" />
        </LinearLayout>

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/wheelPickerLayout"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_below="@+id/rowLayout"
        android:layout_toRightOf="@+id/dayIndicator">

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white_gray"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>